Bug 1278021 - Don't treat nsDisplayOpacity as participating in a preserve-3d context if it is an untransformed leaf. r=thinker